--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,7 @@
 {
-  "name": "ddu-source-quickfix_history",
+  "name": "@kyoh86/ddu-source-quickfix_history",
+  "version": "0.0.0",
+  "exports": {},
   "description": "Quickfix history source for ddu.vim",
   "tasks": {
     "test": "deno test --allow-env=DENOPS_TEST_CONNECT_TIMEOUT,DENOPS_TEST_DENOPS_PATH,DENOPS_TEST_VERBOSE,DENOPS_TEST_VIM_EXECUTABLE,DENOPS_TEST_NVIM_EXECUTABLE --allow-run=vim,nvim --allow-net=127.0.0.1:0 --allow-read",
