--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,27 +1,23 @@
+// $schema: https://raw.githubusercontent.com/denoland/deno/refs/heads/main/cli/schemas/config-file.v1.json
 {
   "name": "@kyoh86/ddu-source-quickfix_history",
   "version": "0.0.0",
-  "exports": {},
   "description": "Quickfix history source for ddu.vim",
-  "fmt": { "include": ["denops/**/*.ts", "deno.jsonc"] },
-  "lint": { "include": ["denops/**/*.ts", "deno.jsonc"] },
-  "test": { "include": ["denops/**/*_test.ts"] },
+  "exports": {},
+  "lock": false,
+  "fmt": { "include": ["./**/*.ts", "deno.jsonc"] },
+  "lint": { "include": ["./**/*.ts", "deno.jsonc"] },
+  "test": { "include": ["./**/*_test.ts"] },
   "tasks": {
     "update": "deno outdated --update",
-    "fmt": "deno fmt",
-    "check": "deno check ./denops/**/*.ts",
-    "lint": "deno lint",
     "test": "deno test --check --permit-no-files --allow-env=DENOPS_TEST_CONNECT_TIMEOUT,DENOPS_TEST_DENOPS_PATH,DENOPS_TEST_VERBOSE,DENOPS_TEST_VIM_EXECUTABLE,DENOPS_TEST_NVIM_EXECUTABLE,MSGPACKR_NATIVE_ACCELERATION_DISABLED --allow-run=vim,nvim --allow-net=127.0.0.1:0 --allow-read"
   },
-  "lock": false,
   "workspace": [
     "./denops/@ddu-sources",
     "./denops/@ddu-kinds"
   ],
   "imports": {
-    "@denops/std": "jsr:@denops/std@^8.2.0",
     "@denops/test": "jsr:@denops/test@^4.0.0",
-    "@shougo/ddu-vim": "jsr:@shougo/ddu-vim@^11.1.0",
     "@std/assert": "jsr:@std/assert@^1.0.16"
   }
 }
